// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/upload-url/instagram single video Publish the Post video gets published 1`] = `
Ok {
  "value": Object {
    "postId": "17901378965653697",
    "url": "https://www.instagram.com/p/CiNWf4gqh_E/",
  },
}
`;

exports[`social-media/upload-url/instagram single video RegisterUpload should return an id 1`] = `
Ok {
  "value": Object {
    "assetId": "17953314143089493",
  },
}
`;
